--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "eslint": "npx projen eslint",
     "projen": "npx projen"
   },
+  "author": {
+    "name": "Hassan Azhar Khan",
+    "email": "hassanazharkhan@gmail.com",
+    "organization": false
+  },
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/node": "^14.17.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
+    "esbuild": "^0.12.26",
     "eslint": "^7.32.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.4.0",
@@ -31,6 +37,11 @@
     "projen": "^0.28.0",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "@shiftcoders/dynamo-easy": "^7.1.0",
+    "aws-sdk": "^2.987.0",
+    "reflect-metadata": "^0.1.13"
   },
   "bundledDependencies": [],
   "license": "Apache-2.0",
